<resources>
    <string name="app_name">DocMaker</string>

    <!--    Other texts starts here-->
    <string name="backButtonCD">Back button</string>
    <string name="rotateButtonCD">Rotate button</string>
    <string name="FlipCD">Flip button</string>
    <string name="shareCD">Share button</string>
    <string name="cacheClearedCD">Cache Cleared</string>
    <string name="toolBarCD">Toolbar</string>
    <string name="saveDocButtonCD">Save document button</string>
    <string name="deleteSelectedDocumentsCD">Delete selected documents</string>
    <string name="noDocumentsCD">No documents yet</string>
    <string name="clickButtonGuideCD">Welcome to DocMaker</string>
    <string name="addNewDocCD">Add new document</string>
    <string name="deleteDocButtonCD">Delete document button</string>
    <string name="previewDocCD">Preview document</string>
    <string name="niy">No images yet</string>
    <string name="CD1">Delete selected images</string>
    <string name="CD2">Select images from gallery</string>
    <string name="CD3">Click image from camera</string>
    <string name="CD4">Image view for cropping</string>
    <string name="CD5">Splash screen</string>
    <string name="CD6">Image capture button</string>
    <string name="CD7">Flash on off button</string>
    <string name="CD8">Back button to document</string>
    <string name="CD9">Share image button</string>
    <string name="CD10">Delete image</string>
    <string name="di">download image</string>
    <string name="CD11">Edit image button</string>
    <string name="CD12">Retake image</string>
    <string name="CD13">Image</string>
    <string name="CD15">Previous image</string>
    <string name="CD16">Next image</string>
    <string name="bnwText">Bnw</string>
    <string name="cropText">Crop</string>
    <string name="saveText">   Save   </string>
    <string name="allDocsAlertText">Do you want to delete the selected files and their images?</string>
    <string name="allDocString">DocMaker</string>
    <string name="docViewAlertText">Do you want to delete the selected images?</string>
    <string name="docViewImagePosition">%1$d</string>
    <string name="t1">Add / capture photos</string>
    <string name="t2">Save</string>
    <string name="t3">Preview</string>
    <string name="t4">DocMaker_6_11_2020_18_6_40</string>
    <string name="t5">Settings</string>
    <string name="t6">PDF Image Quality:-</string>
    <string name="t7">Low</string>
    <string name="t8">Medium</string>
    <string name="t9">High</string>
    <string name="t10">Save</string>
    <string name="t11">Edit</string>
    <string name="t12">Retake</string>
    <string name="t13"><b>Warning :</b> Images with zero size.</string>
    <string name="t14">Do you want to delete this file?</string>
    <string name="t15">We need some permissions to perform necessary tasks. Please permit the permission(s) through Settings.\n\nSelect Permissions -> Enable permission</string>
    <string name="t16">Do you want to delete this image?</string>
    <string name="DocMakerNotificationChannelName">DocMakerNotificationChannelName</string>
    <string name="DocMakerNotificationChannelId">DocMakerNotificationChannelId</string>
    <string name="DocMakerNotificationDescription">This is the notification section of DocMaker.</string>

    <!--    all docs recycler view-->
    <string name="date">Date: %1$s</string>
    <string name="time">Time: %1$s</string>
    <string name="pics">Pics: %1$s</string>

    <!--    All docs -->
    <string name="docDetails"><b>DocName:</b> %1$s\n\n<b>Date of Creation:</b> %2$s\n\n<b>Time of Creation:</b> %3$s\n\n<b>Pics:</b> %4$s</string>

    <string name="about_app">
        <b>DocMaker</b>\n
        This app helps you to create PDF files from images.\n\n

        <b>Best Practises</b>\n
        - Always use the medium image quality in the settings.\n
        - Try to keep the lights on the document.\n
        - Use the cache clear functionality in the app to clear unwanted images.\n
        - Keep the camera steady while clicking images (use can click on the screen to focus).\n
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_document_view">DocumentView</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_editing">EditingActivity</string>
    <string name="title_activity_single_image">SingleImageActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
