<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/document_view_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".document_view">

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/empty_document_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@color/app_bg"
            android:contentDescription="@string/niy"
            app:srcCompat="@android:drawable/ic_menu_crop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="50dp"
            android:background="@color/app_bg"
            android:text="@string/t1"
            android:textAlignment="center"
            android:textColor="@color/text_color" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/doc_view_options"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_weight="1"
        android:background="@color/my_button_color"
        android:orientation="horizontal"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/my_button_color"
            android:contentDescription="@string/backButtonCD"
            android:onClick="BackButtonListener"
            android:rotation="-90"
            android:src="@drawable/ic_baseline_arrow_upward_24" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:backgroundTint="@color/my_button_color"
            android:contentDescription="@string/shareCD"
            android:onClick="SharePdfButtonListener"
            android:src="@drawable/ic_baseline_share_24" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/save_doc_imageButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/my_button_color"
                android:contentDescription="@string/saveDocButtonCD"
                android:foregroundGravity="top"
                android:onClick="SaveDocButtonListener"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_save_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/t2"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </FrameLayout>

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/my_button_color"
            android:contentDescription="@string/deleteDocButtonCD"
            android:onClick="DeleteDocButtonListener"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_delete_24" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/my_button_color"
                android:contentDescription="@string/previewDocCD"
                android:onClick="pdfPreviewButtonListener"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_preview_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/t3"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </FrameLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/deleteSelectedDocumentsButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:layout_weight="1"
        android:background="@drawable/circular_button"
        android:contentDescription="@string/CD1"
        android:onClick="selectiveDeleteButtonListener"
        android:padding="6dp"
        android:src="@drawable/ic_baseline_delete_24"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/doc_name_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_bg"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doc_view_options">

        <TextView
            android:id="@+id/doc_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rename_click"
            android:elevation="10dp"
            android:maxEms="10"
            android:minHeight="48dp"
            android:onClick="DocNameClickListener"
            android:padding="7dp"
            android:text="@string/t4"
            android:textColor="@color/black"
            android:textSize="20sp" />
<!--
        <TextView
            android:id="@+id/warning_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/warning"
            android:padding="10dp"
            android:text="@string/t13"
            android:textColor="@color/text_color"
            android:textSize="20sp" />-->
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_doc_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doc_name_ll">
       <!-- <ListView
            android:id="@+id/doc_view_list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/app_bg"
            android:horizontalSpacing="10dp"
            android:padding="10dp"
            android:verticalSpacing="10dp" />-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/docRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/app_bg"
            android:padding="10dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/gallery_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/floating_action_button_background"
        android:clickable="true"
        android:contentDescription="@string/CD2"
        android:focusable="true"
        android:onClick="GallerySelectButtonListener"
        android:src="@drawable/ic_baseline_photo_library_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/floating_action_button_background"
        android:clickable="true"
        android:contentDescription="@string/CD3"
        android:focusable="true"
        android:onClick="ClickNewPhotoButtonListener"
        android:src="@drawable/ic_baseline_photo_camera_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>