<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:navigationIcon="@drawable/ic_baseline_dehaze_24"
        android:id="@+id/toolBarAllDocs"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:collapseIcon="@drawable/flash_off"
        android:background="@color/medium"
        android:onClick="toolBarClick"
        android:contentDescription="@string/toolBarCD"
        android:popupTheme="@style/Theme.AppCompat.Light"
        android:title="@string/app_name"
        android:titleTextColor="@color/extra_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/selected_delete_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:layout_weight="1"
        android:background="@drawable/circular_button"
        android:contentDescription="@string/deleteSelectedDocumentsCD"
        android:src="@drawable/ic_baseline_delete_24"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBarAllDocs" />

    <FrameLayout
        android:id="@+id/empty_home_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/app_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBarAllDocs">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@color/app_bg"
            android:contentDescription="@string/noDocumentsCD"
            app:srcCompat="@drawable/ic_baseline_picture_as_pdf_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="50dp"
            android:background="@color/app_bg"
            android:text="@string/clickButtonGuideCD"
            android:textAlignment="center"
            android:textColor="@color/text_color" />
    </FrameLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_all_doc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/app_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBarAllDocs">

        <!-- <ListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@color/app_bg"
             android:divider="@color/black"
             android:dividerHeight="1px"/>-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_docs_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_bg" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/floating_action_button_background"
        android:clickable="true"
        android:contentDescription="@string/addNewDocCD"
        android:focusable="true"
        android:onClick="addNewDocument"
        android:scaleType="center"
        android:src="@drawable/ic_baseline_picture_as_pdf_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="56dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/cacheClearedCD"
        android:src="@drawable/rocket"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>